[package]
authors = ["Martin Pool <mbp@sourcefrog.net>"]
description = "A robust backup tool."
edition = "2021"
homepage = "https://github.com/sourcefrog/conserve/"
keywords = ["archive", "backup"]
license = "GPL-2.0"
name = "conserve"
readme = "README.md"
repository = "https://github.com/sourcefrog/conserve/"
version = "23.1.1"
rust-version = "1.63"

[[bin]]
doc = false
name = "conserve"

[dependencies]
assert_matches = "1.5.0"
blake2-rfc = "0.2.18"
bytes = "1.1.0"
cachedir = "0.3"
clicolors-control = "1.0"
derive_more = "0.99"
filetime = "0.2"
globset = "0.4.5"
hex = "0.4.2"
itertools = "0.10"
lazy_static = "1.4.0"
metrics = "0.20"
metrics-util = "0.14"
mutants = "0.0.3"
rayon = "1.3.0"
readahead-iterator = "0.1.1"
regex = "1.3.9"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snap = "1.0.0"
tempfile = "3"
thiserror = "1.0.19"
thousands = "0.2.0"
time = { version = "0.3", features = ["local-offset"] }
tracing = "0.1"
tracing-appender = "0.2"
unix_mode = "0.1"
url = "2.2.2"
indoc = "1.0.8"
flatbuffers = "23.1.21"

[target.'cfg(unix)'.dependencies]
users = "0.11"
nix = "0.26"

[dependencies.clap]
version = "4.0"
features = ["derive", "deprecated", "wrap_help"]

[dependencies.nutmeg]
version = "0.1.3-pre"
git = "https://github.com/sourcefrog/nutmeg"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter", "fmt", "json", "local-time", "time"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
cp_r = "0.5"
dir-assert = "0.2"
predicates = "2"
pretty_assertions = "1.0"
proptest = "1.0"
proptest-derive = "0.3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[features]
blake2_simd_asm = ["blake2-rfc/simd_asm"]

[lib]
doctest = false

[profile.release]
debug = true
