[package]
authors = ["Martin Pool <mbp@sourcefrog.net>"]
description = "A robust backup tool."
edition = "2021"
homepage = "https://github.com/sourcefrog/conserve/"
keywords = ["archive", "backup"]
license = "GPL-2.0"
name = "conserve"
readme = "README.md"
repository = "https://github.com/sourcefrog/conserve/"
version = "23.11.0"
rust-version = "1.82"

[features]
default = ["s3", "sftp"]
s3 = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-types",
    "dep:base64",
    "dep:crc32c",
    "dep:futures",
]
s3-integration-test = ["s3"]
sftp = ["dep:ssh2", "dep:libssh2-sys"]

[[bin]]
doc = false
name = "conserve"

[dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.85"
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.56", optional = true }
aws-types = { version = "1.1", optional = true }
base64 = { version = "0.22", optional = true }
blake2-rfc = "0.2.18"
bytes = "1.7"
cachedir = "0.3"
clicolors-control = "1.0"
crc32c = { version = "0.6.6", optional = true }
derive_more = "0.99"
fail = { version = "0.5.1" }
filetime = "0.2"
futures = { version = "0.3", optional = true }
globset = "0.4.5"
hex = "0.4.2"
itertools = "0.12"
lazy_static = "1.4.0"
libssh2-sys = { version = "0.3.0", optional = true }
lru = "0.12"
mutants = "0.0.3"
regex = "1.3.9"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snap = "1.0.0"
ssh2 = { version = "0.9.4", optional = true }
strum = "0.26"
strum_macros = "0.26"
tempfile = "3"
thiserror = "1.0.19"
thousands = "0.2.0"
time = { version = "0.3.35", features = [
    "local-offset",
    "macros",
    "serde",
    "serde-human-readable",
] }
tokio = { version = "1.43", features = ["full", "test-util", "tracing"] }
tracing = "0.1"
tracing-appender = "0.2"
unix_mode = "0.1"
url = "2.2.2"
whoami = "1.5.2"

[target.'cfg(unix)'.dependencies]
uzers = "0.11"
nix = { version = "0.28", features = ["fs", "user"] }

[target.'cfg(windows)'.dependencies]
windows-projfs = { version = "0.1.6", features = ["dynamic-import"] }

[dependencies.clap]
version = "4.3"
features = ["derive", "deprecated", "wrap_help"]

[dependencies.nutmeg]
version = "0.1.5"
# git = "https://github.com/sourcefrog/nutmeg"
# branch = "const-new"
# path = "../nutmeg"

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter", "fmt", "json", "local-time", "time"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
cp_r = "0.5"
dir-assert = "0.2"
indoc = "2.0"
predicates = "3"
pretty_assertions = "1.0"
proptest = "1.5"
proptest-derive = "0.5"
rand = "0.8"
rstest = { version = "0.19", default-features = false }
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[profile.release]
debug = true

[[test]]
name = "failpoints"
required-features = ["fail/failpoints"]
