[package]
authors = ["Martin Pool <mbp@sourcefrog.net>"]
description = "A robust backup tool."
edition = "2024"
homepage = "https://github.com/sourcefrog/conserve/"
keywords = ["archive", "backup"]
license = "GPL-2.0"
name = "conserve"
readme = "README.md"
repository = "https://github.com/sourcefrog/conserve/"
version = "23.11.0"
rust-version = "1.88"

[features]
default = ["s3", "sftp"]
s3 = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-types",
    "dep:base64",
    "dep:crc32c",
    "dep:futures",
]
s3-integration-test = ["s3"]
sftp = ["dep:ssh2", "dep:libssh2-sys"]

[[bin]]
doc = false
name = "conserve"

[dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.89"
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-types = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
blake2-rfc = "0.2.18"
bytes = "1.11"
cachedir = "0.3"
clicolors-control = "1.0"
crc32c = { version = "0.6.8", optional = true }
derive_more = { version ="2.1", features = ["display", "add", "add_assign"] }
filetime = "0.2"
futures = { version = "0.3", optional = true }
globset = "0.4.18"
hex = "0.4.3"
itertools = "0.14"
lazy_static = "1.5.0"
libssh2-sys = { version = "0.3.1", optional = true }
lru = "0.16"
mutants = "0.0.4"
regex = "1.12.3"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snap = "1.1.1"
ssh2 = { version = "0.9.5", optional = true }
strum = "0.27"
strum_macros = "0.27"
tempfile = "3"
thiserror = "2.0"
thousands = "0.2.0"
tokio = { version = "1.49", features = ["full", "test-util", "tracing"] }
tracing = "0.1"
tracing-appender = "0.2"
unix_mode = "0.1"
url = "2.5.8"
whoami = "2.1.1"

[dependencies.jiff]
version = "0.2"
features = ["serde"]

[target.'cfg(unix)'.dependencies]
uzers = "0.12"
nix = { version = "0.30", features = ["fs", "user"] }

[target.'cfg(windows)'.dependencies]
windows-projfs = { version = "0.1.7", features = ["dynamic-import"] }

[dependencies.clap]
version = "4.5"
features = ["derive", "deprecated", "wrap_help"]

[dependencies.nutmeg]
version = "0.1.5"
# git = "https://github.com/sourcefrog/nutmeg"
# branch = "const-new"
# path = "../nutmeg"

[dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter", "fmt", "json", "local-time", "time"]

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1"
cp_r = "0.5"
dir-assert = "0.2"
indoc = "2.0"
predicates = "3"
pretty_assertions = "1.4"
proptest = "1.10"
proptest-derive = "0.8"
rand = "0.10"
rstest = { version = "0.26", default-features = false }

[profile.release]
debug = true
